# MediaElch

./: meson.build
src/: meson.build
src/main/: MainWindow.cpp
src/scrapers/: GayDvd  GayDvdEmpire.cpp  GayDvdEmpire.h
