
headers = [
    'concerts/ConcertController.h',
    'concerts/ConcertFilesWidget.h',
    'concerts/ConcertSearch.h',
    'concerts/ConcertSearchWidget.h',
    'concerts/ConcertWidget.h',
    'concerts/ConcertInfoWidget.h',
    'data/Concert.h',
    'data/ConcertFileSearcher.h',
    'data/ConcertModel.h',
    'data/ConcertProxyModel.h',
    'data/ConcertScraperInterface.h',
    'concerts/ConcertStreamDetailsWidget.h',
    'data/Database.h',
    'data/ImageCache.h',
    'data/ImageProviderInterface.h',
    'data/Movie.h',
    'data/MovieFileSearcher.h',
    'data/MovieFilesOrganizer.h',
    'data/MovieModel.h',
    'data/MovieProxyModel.h',
    'data/MusicScraperInterface.h',
    'data/MovieScraperInterface.h',
    'data/Storage.h',
    'data/StreamDetails.h',
    'data/Subtitle.h',
    'data/TvScraperInterface.h',
    'data/TvShow.h',
    'data/TvShowEpisode.h',
    'data/TvShowFileSearcher.h',
    'downloads/DownloadsWidget.h',
    'downloads/Extractor.h',
    'downloads/FileWorker.h',
    'downloads/ImportActions.h',
    'downloads/ImportDialog.h',
    'downloads/MakeMkvCon.h',
    'downloads/MakeMkvDialog.h',
    'downloads/MyFile.h',
    'downloads/UnpackButtons.h',
    'export/ExportDialog.h',
    'export/ExportTemplate.h',
    'export/ExportTemplateLoader.h',
    'globals/ComboDelegate.h',
    'globals/DownloadManager.h',
    'globals/ImageDialog.h',
    'globals/ImagePreviewDialog.h',
    'globals/Manager.h',
    'globals/NameFormatter.h',
    'globals/NetworkReplyWatcher.h',
    'globals/TrailerDialog.h',
    'image/Image.h',
    'image/ImageCapture.h',
    'image/ImageModel.h',
    'image/ImageProxyModel.h',
    'image/ImageWidget.h',
    'imageProviders/FanartTv.h',
    'imageProviders/FanartTvMusic.h',
    'imageProviders/FanartTvMusicArtists.h',
    'imageProviders/TheTvDbImages.h',
    'imageProviders/TMDbImages.h',
    'main/AboutDialog.h',
    'main/FileScannerDialog.h',
    'main/MainWindow.h',
    'main/Message.h',
    'main/MyIconFont.h',
    'main/Navbar.h',
    'main/Update.h',
    'mediaCenterPlugins/XbmcXml.h',
    'movies/CertificationWidget.h',
    'movies/GenreWidget.h',
    'movies/MovieController.h',
    'movies/MovieDuplicateItem.h',
    'movies/MovieDuplicates.h',
    'movies/MovieFilesWidget.h',
    'movies/MovieMultiScrapeDialog.h',
    'movies/MovieSearch.h',
    'movies/MovieSearchWidget.h',
    'movies/MovieWidget.h',
    'music/Album.h',
    'music/AlbumController.h',
    'music/Artist.h',
    'music/ArtistController.h',
    'music/MusicFileSearcher.h',
    'music/MusicFilesWidget.h',
    'music/MusicModel.h',
    'music/MusicModelItem.h',
    'music/MusicMultiScrapeDialog.h',
    'music/MusicProxyModel.h',
    'music/MusicSearch.h',
    'music/MusicSearchWidget.h',
    'music/MusicWidget.h',
    'music/MusicWidgetAlbum.h',
    'music/MusicWidgetArtist.h',
    'notifications/MacNotificationHandler.h',
    'notifications/NotificationBox.h',
    'notifications/Notificator.h',
    'renamer/RenamerDialog.h',
    'renamer/RenamerPlaceholders.h',
    'scrapers/AdultDvdEmpire.h',
    'scrapers/AEBN.h',
    'scrapers/CustomMovieScraper.h',
    'scrapers/HotMovies.h',
    'scrapers/IMDB.h',
    'scrapers/OFDb.h',
    'scrapers/TheTvDb.h',
    'scrapers/TMDb.h',
    'scrapers/TMDbConcerts.h',
    'scrapers/TvTunes.h',
    'scrapers/UniversalMusicScraper.h',
    'scrapers/VideoBuster.h',
    'sets/MovieListDialog.h',
    'sets/SetsWidget.h',
    'settings/AdvancedSettings.h',
    'settings/ExportTemplateWidget.h',
    'settings/Settings.h',
    'settings/SettingsWindow.h',
    'ui/small_widgets/AlphabeticalList.h',
    'ui/small_widgets/Badge.h',
    'ui/small_widgets/ClosableImage.h',
    'ui/small_widgets/FilterWidget.h',
    'ui/small_widgets/ImageGallery.h',
    'ui/small_widgets/ImageLabel.h',
    'ui/small_widgets/LoadingStreamDetails.h',
    'ui/small_widgets/MediaFlags.h',
    'ui/small_widgets/MessageLabel.h',
    'ui/small_widgets/MusicTreeView.h',
    'ui/small_widgets/MyCheckBox.h',
    'ui/small_widgets/MyLabel.h',
    'ui/small_widgets/MyLineEdit.h',
    'ui/small_widgets/MySpinBox.h',
    'ui/small_widgets/MySplitter.h',
    'ui/small_widgets/MySplitterHandle.h',
    'ui/small_widgets/MyTableView.h',
    'ui/small_widgets/MyTableWidget.h',
    'ui/small_widgets/MyTreeView.h',
    'ui/small_widgets/MyWidget.h',
    'ui/small_widgets/SearchOverlay.h',
    'ui/small_widgets/SlidingStackedWidget.h',
    'ui/small_widgets/TagCloud.h',
    'ui/small_widgets/TvShowTreeView.h',
    'ui/tv_show/TvShowFilesWidget.h',
    'support/SupportDialog.h',
    'trailerProviders/HdTrailers.h',
    'trailerProviders/TrailerProvider.h',
    'tvShows/TvShowMultiScrapeDialog.h',
    'tvShows/TvShowSearch.h',
    'tvShows/TvShowSearchEpisode.h',
    'tvShows/TvShowUpdater.h',
    'tvShows/TvShowWidget.h',
    'tvShows/TvShowWidgetEpisode.h',
    'tvShows/TvShowWidgetSeason.h',
    'tvShows/TvShowWidgetTvShow.h',
    'tvShows/TvTunesDialog.h',
    'tvShows/TvShowModel.h',
    'tvShows/TvShowProxyModel.h',
    'tvShows/model/TvShowModelItem.h',
    'tvShows/model/TvShowBaseModelItem.h',
    'tvShows/model/TvShowRootModelItem.h',
    'tvShows/model/EpisodeModelItem.h',
    'tvShows/model/SeasonModelItem.h',
    'xbmc/XbmcSync.h'
]

src = [
    'main.cpp',
    'concerts/ConcertController.cpp',
    'concerts/ConcertFilesWidget.cpp',
    'concerts/ConcertSearch.cpp',
    'concerts/ConcertSearchWidget.cpp',
    'concerts/ConcertStreamDetailsWidget.cpp',
    'concerts/ConcertWidget.cpp',
    'concerts/ConcertInfoWidget.cpp',
    'data/Concert.cpp',
    'data/ConcertFileSearcher.cpp',
    'data/ConcertModel.cpp',
    'data/ConcertProxyModel.cpp',
    'data/Database.cpp',
    'data/ImageCache.cpp',
    'data/Movie.cpp',
    'data/MovieFileSearcher.cpp',
    'data/MovieFilesOrganizer.cpp',
    'data/MovieImages.cpp',
    'data/MovieModel.cpp',
    'data/MovieProxyModel.cpp',
    'data/Rating.cpp',
    'data/ScraperInterface.cpp',
    'data/Storage.cpp',
    'data/StreamDetails.cpp',
    'data/Subtitle.cpp',
    'data/TvShow.cpp',
    'data/TvShowEpisode.cpp',
    'data/TvShowFileSearcher.cpp',
    'downloads/DownloadsWidget.cpp',
    'downloads/Extractor.cpp',
    'downloads/FileWorker.cpp',
    'downloads/ImportActions.cpp',
    'downloads/ImportDialog.cpp',
    'downloads/MakeMkvCon.cpp',
    'downloads/MakeMkvDialog.cpp',
    'downloads/MyFile.cpp',
    'downloads/UnpackButtons.cpp',
    'export/ExportDialog.cpp',
    'export/ExportTemplate.cpp',
    'export/ExportTemplateLoader.cpp',
    'globals/ComboDelegate.cpp',
    'globals/DownloadManager.cpp',
    'globals/DownloadManagerElement.cpp',
    'globals/Filter.cpp',
    'globals/Helper.cpp',
    'globals/ImageDialog.cpp',
    'globals/ImagePreviewDialog.cpp',
    'globals/Manager.cpp',
    'globals/NameFormatter.cpp',
    'globals/NetworkReplyWatcher.cpp',
    'globals/TrailerDialog.cpp',
    'image/Image.cpp',
    'image/ImageCapture.cpp',
    'image/ImageModel.cpp',
    'image/ImageProxyModel.cpp',
    'image/ImageWidget.cpp',
    'imageProviders/FanartTv.cpp',
    'imageProviders/FanartTvMusic.cpp',
    'imageProviders/FanartTvMusicArtists.cpp',
    'imageProviders/TheTvDbImages.cpp',
    'imageProviders/TMDbImages.cpp',
    'main/AboutDialog.cpp',
    'main/FileScannerDialog.cpp',
    'main/MainWindow.cpp',
    'main/Message.cpp',
    'main/MyIconFont.cpp',
    'main/Navbar.cpp',
    'main/Update.cpp',
    'mediaCenterPlugins/XbmcXml.cpp',
    'mediaCenterPlugins/kodi/ArtistXmlReader.cpp',
    'mediaCenterPlugins/kodi/ArtistXmlWriter.cpp',
    'mediaCenterPlugins/kodi/ConcertXmlWriter.cpp',
    'mediaCenterPlugins/kodi/ConcertXmlReader.cpp',
    'mediaCenterPlugins/kodi/EpisodeXmlReader.cpp',
    'mediaCenterPlugins/kodi/MovieXmlWriter.cpp',
    'mediaCenterPlugins/kodi/MovieXmlReader.cpp',
    'mediaCenterPlugins/kodi/TvShowXmlWriter.cpp',
    'mediaCenterPlugins/kodi/TvShowXmlReader.cpp',
    'movies/CertificationWidget.cpp',
    'movies/GenreWidget.cpp',
    'movies/MovieController.cpp',
    'movies/MovieDuplicateItem.cpp',
    'movies/MovieDuplicates.cpp',
    'movies/MovieFilesWidget.cpp',
    'movies/MovieMultiScrapeDialog.cpp',
    'movies/MovieSearch.cpp',
    'movies/MovieSearchWidget.cpp',
    'movies/MovieWidget.cpp',
    'music/Album.cpp',
    'music/AlbumController.cpp',
    'music/Artist.cpp',
    'music/ArtistController.cpp',
    'music/MusicFileSearcher.cpp',
    'music/MusicFilesWidget.cpp',
    'music/MusicModel.cpp',
    'music/MusicModelItem.cpp',
    'music/MusicMultiScrapeDialog.cpp',
    'music/MusicProxyModel.cpp',
    'music/MusicSearch.cpp',
    'music/MusicSearchWidget.cpp',
    'music/MusicWidget.cpp',
    'music/MusicWidgetAlbum.cpp',
    'music/MusicWidgetArtist.cpp',
    'notifications/NotificationBox.cpp',
    'notifications/Notificator.cpp',
    'qml/AlbumImageProvider.cpp',
    'renamer/ConcertRenamer.cpp',
    'renamer/EpisodeRenamer.cpp',
    'renamer/MovieRenamer.cpp',
    'renamer/Renamer.cpp',
    'renamer/RenamerDialog.cpp',
    'renamer/RenamerPlaceholders.cpp',
    'scrapers/AdultDvdEmpire.cpp',
    'scrapers/AEBN.cpp',
    'scrapers/CustomMovieScraper.cpp',
    'scrapers/HotMovies.cpp',
    'scrapers/IMDB.cpp',
    'scrapers/OFDb.cpp',
    'scrapers/TheTvDb.cpp',
    'scrapers/TMDb.cpp',
    'scrapers/TMDbConcerts.cpp',
    'scrapers/TvTunes.cpp',
    'scrapers/UniversalMusicScraper.cpp',
    'scrapers/VideoBuster.cpp',
    'sets/MovieListDialog.cpp',
    'sets/SetsWidget.cpp',
    'settings/AdvancedSettings.cpp',
    'settings/DataFile.cpp',
    'settings/DirectorySettings.cpp',
    'settings/ExportTemplateWidget.cpp',
    'settings/ImportSettings.cpp',
    'settings/KodiSettings.cpp',
    'settings/NetworkSettings.cpp',
    'settings/ScraperSettings.cpp',
    'settings/Settings.cpp',
    'settings/SettingsWindow.cpp',
    'ui/small_widgets/AlphabeticalList.cpp',
    'ui/small_widgets/Badge.cpp',
    'ui/small_widgets/ClosableImage.cpp',
    'ui/small_widgets/FilterWidget.cpp',
    'ui/small_widgets/ImageGallery.cpp',
    'ui/small_widgets/ImageLabel.cpp',
    'ui/small_widgets/LoadingStreamDetails.cpp',
    'ui/small_widgets/MediaFlags.cpp',
    'ui/small_widgets/MessageLabel.cpp',
    'ui/small_widgets/MusicTreeView.cpp',
    'ui/small_widgets/MyCheckBox.cpp',
    'ui/small_widgets/MyLabel.cpp',
    'ui/small_widgets/MyLineEdit.cpp',
    'ui/small_widgets/MySpinBox.cpp',
    'ui/small_widgets/MySplitter.cpp',
    'ui/small_widgets/MySplitterHandle.cpp',
    'ui/small_widgets/MyTableView.cpp',
    'ui/small_widgets/MyTableWidget.cpp',
    'ui/small_widgets/MyTableWidgetItem.cpp',
    'ui/small_widgets/MyTreeView.cpp',
    'ui/small_widgets/MyWidget.cpp',
    'ui/small_widgets/SearchOverlay.cpp',
    'ui/small_widgets/SlidingStackedWidget.cpp',
    'ui/small_widgets/TagCloud.cpp',
    'ui/small_widgets/TvShowTreeView.cpp',
    'ui/tv_show/TvShowFilesWidget.cpp',
    'support/SupportDialog.cpp',
    'trailerProviders/HdTrailers.cpp',
    'tvShows/TvShowMultiScrapeDialog.cpp',
    'tvShows/TvShowSearch.cpp',
    'tvShows/TvShowSearchEpisode.cpp',
    'tvShows/TvShowUpdater.cpp',
    'tvShows/TvShowWidget.cpp',
    'tvShows/TvShowWidgetEpisode.cpp',
    'tvShows/TvShowWidgetSeason.cpp',
    'tvShows/TvShowWidgetTvShow.cpp',
    'tvShows/TvTunesDialog.cpp',
    'tvShows/TvShowModel.cpp',
    'tvShows/TvShowProxyModel.cpp',
    'tvShows/model/TvShowModelItem.cpp',
    'tvShows/model/TvShowBaseModelItem.cpp',
    'tvShows/model/TvShowRootModelItem.cpp',
    'tvShows/model/EpisodeModelItem.cpp',
    'tvShows/model/SeasonModelItem.cpp',
    'xbmc/XbmcSync.cpp',
    'data/ImdbId.cpp',
    'data/TmdbId.cpp',
    'data/TvDbId.cpp',
    'data/EpisodeNumber.cpp',
    'data/SeasonNumber.cpp',
    'data/Certification.cpp',
    'data/MovieCrew.cpp',
]

forms = [
    'main/MainWindow.ui',
    'concerts/ConcertFilesWidget.ui',
    'concerts/ConcertSearch.ui',
    'concerts/ConcertSearchWidget.ui',
    'concerts/ConcertStreamDetailsWidget.ui',
    'concerts/ConcertWidget.ui',
    'concerts/ConcertInfoWidget.ui',
    'downloads/DownloadsWidget.ui',
    'downloads/ImportActions.ui',
    'downloads/ImportDialog.ui',
    'downloads/MakeMkvDialog.ui',
    'downloads/UnpackButtons.ui',
    'export/ExportDialog.ui',
    'globals/ImageDialog.ui',
    'globals/ImagePreviewDialog.ui',
    'globals/TrailerDialog.ui',
    'image/ImageWidget.ui',
    'main/AboutDialog.ui',
    'main/FileScannerDialog.ui',
    'main/Message.ui',
    'main/Navbar.ui',
    'movies/CertificationWidget.ui',
    'movies/GenreWidget.ui',
    'movies/MovieDuplicateItem.ui',
    'movies/MovieDuplicates.ui',
    'movies/MovieFilesWidget.ui',
    'movies/MovieMultiScrapeDialog.ui',
    'movies/MovieSearch.ui',
    'movies/MovieSearchWidget.ui',
    'movies/MovieWidget.ui',
    'music/MusicFilesWidget.ui',
    'music/MusicMultiScrapeDialog.ui',
    'music/MusicSearch.ui',
    'music/MusicSearchWidget.ui',
    'music/MusicWidget.ui',
    'music/MusicWidgetAlbum.ui',
    'music/MusicWidgetArtist.ui',
    'notifications/NotificationBox.ui',
    'renamer/RenamerDialog.ui',
    'renamer/RenamerPlaceholders.ui',
    'sets/MovieListDialog.ui',
    'sets/SetsWidget.ui',
    'settings/ExportTemplateWidget.ui',
    'settings/SettingsWindow.ui',
    'ui/small_widgets/FilterWidget.ui',
    'ui/small_widgets/ImageLabel.ui',
    'ui/small_widgets/LoadingStreamDetails.ui',
    'ui/small_widgets/MediaFlags.ui',
    'ui/small_widgets/TagCloud.ui',
    'ui/tv_show/TvShowFilesWidget.ui',
    'support/SupportDialog.ui',
    'tvShows/ItemWidgetShow.ui',
    'tvShows/TvShowMultiScrapeDialog.ui',
    'tvShows/TvShowSearch.ui',
    'tvShows/TvShowSearchEpisode.ui',
    'tvShows/TvShowWidget.ui',
    'tvShows/TvShowWidgetEpisode.ui',
    'tvShows/TvShowWidgetSeason.ui',
    'tvShows/TvShowWidgetTvShow.ui',
    'tvShows/TvTunesDialog.ui',
    'xbmc/XbmcSync.ui'
]

processed = qt5.preprocess(
  moc_headers : headers,
  ui_files    : forms,
  qresources  : resources,
)

mediaelch_exe = executable('mediaelch',
    sources: [processed, src],
    install: true,
    include_directories: includes,
    dependencies: [qt5_dep, dl_dep],
    link_with: [quazip_lib]
)
